--- a/Report.html
+++ b/Report.html
@@ -35,6 +35,14 @@
                 the logo stood out much more and was very easy to notice. This decision to change the logo colour eventually lead me to change the colour scheme
                 for my website entirely which will be discussed later.
             </p>
+            <p>Secondly, the navigation bar looked very bland and under-designed to me and, since according to the research of Renee Garett, Jason Chiu, Ly Zhang and 
+                Sean D. Young, PhD (2017) “The seven website design elements most often discussed in relation to user engagement in the reviewed studies were navigation (62.86%), 
+                graphical representation (60%), organization (42.86%), content utility (37.14%), purpose (31.43%), simplicity (31.43%), and readability (31.43%)” (Section 4). 
+                It is very important that the navigation bar is well designed, engaging and accessible, because it is arguably the most important aspect of the website and in many 
+                cases the first place the user looks upon first viewing the site. Therefor I moved the logo from the header to the navigation bar and changed the layout of the bar so 
+                that the logo was on the left and the navigation links were on the right, this change, though simplistic, dramatically increased the quality of my website and would be 
+                much more appealing to the target audience.
+            </p>
         </div>
         <div class="footer">
             <h3>Website by Ross Fitch. Copyright &copy; 2019, All rights reserved.</h3>
