--- a/Report.html
+++ b/Report.html
@@ -31,7 +31,7 @@
                 suited the website, I got to work implementing the initial, mobile friendly version of my website and it didn’t 
                 take me long to notice a few design aspects with needed to be altered.
             </p>
-            
+
             <br>
             <img class="repImg" src="img/wireframeMob.png"></img>
             <br>
@@ -70,6 +70,10 @@
                 it can’t stretch too far and also by using a 50/50 layout for content rather than content stretching the entire width 
                 of the screen.
             </p>
+
+            <br>
+            <img class="repImg" src="img/wireframeDesk.png"></img>
+            <br>
 
             <p>
                 Finally, once I was happy with the layout for the larger desktop friendly design of my website and I had implemented 
