--- a/Report.html
+++ b/Report.html
@@ -32,6 +32,7 @@
                 take me long to notice a few design aspects with needed to be altered.
             </p>
 
+            <h1>Mobile Wireframe</h1>
             <img class="repImg" src="img/wireframeMob.png"></img>
             <br>
 
@@ -69,7 +70,8 @@
                 it can’t stretch too far and also by using a 50/50 layout for content rather than content stretching the entire width 
                 of the screen.
             </p>
-
+            
+            <h1>Desktop Wireframe</h1>
             <img class="repImg" src="img/wireframeDesk.png"></img>
             <br>
 
@@ -82,6 +84,10 @@
                 an accessibility perspective. I have also used the Roboto font for most of the text on my site because this font is 
                 considered web standard as it is easily readable and a nice-looking sans-serif font.
             </p>
+
+            <h1>Pre Recolour Design</h1>
+            <img class="repImg" src="img/inDev.png"></img>
+            <br>
 
             <p>
                 In conclusion, the design process for my website went relatively smoothly overall but some major problems did arise 
