--- a/Report.html
+++ b/Report.html
@@ -85,7 +85,7 @@
                 considered web standard as it is easily readable and a nice-looking sans-serif font.
             </p>
 
-            <h1>Pre Recolour Design</h1>
+            <h1>Early Pre-Recolour Design</h1>
             <img class="repImg" src="img/inDev.png"></img>
             <br>
 
