--- a/Report.html
+++ b/Report.html
@@ -98,8 +98,8 @@
             </p>
             
             <p>References:</p>
-            <p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4974011/">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4974011/</a> (2017) A Literature Review: Website Design and User Engagement</p>
-            <p><a href="https://www.w3.org/standards/webdesign/">https://www.w3.org/standards/webdesign/</a> (2019) Web Design &amp; Applications</p>
+            <p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4974011/">https://www.ncbi.nlm.nih.gov</a> (2017) A Literature Review: Website Design and User Engagement</p>
+            <p><a href="https://www.w3.org/standards/webdesign/">https://www.w3.org</a> (2019) Web Design &amp; Applications</p>
         </div>
         <div class="footer">
             <h3>Website by Ross Fitch. Copyright &copy; 2019, All rights reserved.</h3>
