--- a/Report.html
+++ b/Report.html
@@ -32,7 +32,7 @@
                 take me long to notice a few design aspects with needed to be altered.
             </p>
 
-            <h1>Mobile Wireframe</h1>
+            <h1>Mobile Wireframes</h1>
             <img class="repImg" src="img/wireframeMob.png"></img>
             <br><br>
 
