--- a/Products.html
+++ b/Products.html
@@ -11,7 +11,7 @@
                 <a href="./Index.html">Home</a>
                 <a href="./Products.html">XML Page</a>
                 <a href="./Order.html">Order Form</a> 
-                <a href="#slideshow">Slide Show</a> 
+                <a href="./Slideshow.html">Slide Show</a> 
                 <a href="./Report.html">Report</a>
             </div>
         </div>
