--- a/Report.html
+++ b/Report.html
@@ -11,7 +11,7 @@
                 <a href="./Index.html">Home</a>
                 <a href="./Products.html">XML Page</a>
                 <a href="./Order.html">Order Form</a> 
-                <a href="#slideshow">Slide Show</a> 
+                <a href="./Slideshow.html">Slide Show</a> 
                 <a href="./Report.html">Report</a>
             </div>
         </div>
@@ -97,6 +97,7 @@
                 is highly accessible for all people regardless of platform or visual impairments.
             </p>
             
+            <br>
             <p>References:</p>
             <p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4974011/">https://www.ncbi.nlm.nih.gov</a> (2017) A Literature Review: Website Design and User Engagement</p>
             <p><a href="https://www.w3.org/standards/webdesign/">https://www.w3.org</a> (2019) Web Design &amp; Applications</p>
