--- a/Index.html
+++ b/Index.html
@@ -23,9 +23,7 @@
         <div class="header">
             <h1>Home</h1>
         </div>
-        <div class ="slideshow">
-            <div class="fullWidthBg"><img class="fullWidthImg" src="img/HomeBG.png"></div>
-        </div>
+        <img class="homeBg" src="img/homeBg.png"/>
         <div class="mainTextContainer">
             <div class="mainText">
                 <h1>Welcome</h1>
