--- a/Report.html
+++ b/Report.html
@@ -33,7 +33,7 @@
             </p>
 
             <h1>Mobile Wireframes</h1>
-            <img class="repImg" src="img/wireframeMob.png"></img>
+            <img class="repImg" src="img/wireframeMob.png"/>
             <br>
 
             <p>
@@ -72,7 +72,7 @@
             </p>
             
             <h1>Desktop Wireframe</h1>
-            <img class="repImg" src="img/wireframeDesk.png"></img>
+            <img class="repImg" src="img/wireframeDesk.png"/>
             <br>
 
             <p>
@@ -86,7 +86,7 @@
             </p>
 
             <h1>Early Pre-Recolour Design</h1>
-            <img class="repImg" src="img/inDev.png"></img>
+            <img class="repImg" src="img/inDev.png"/>
             <br>
 
             <p>
