--- a/Index.html
+++ b/Index.html
@@ -27,15 +27,17 @@
         <div class="mainTextContainer">
             <div class="mainText">
                 <h1>Welcome</h1>
-                <p>To order, simply head over to our "Order Form" page from the navigation bar
-                    or click the "Buy It Now" button shown under the product to be taken there
-                    automatically.
+                <p>Welcome to East Midlands Electronics! We are a small business based in the east midlands with a
+                    focus on selling the latest electronics and technology and shipping it straight to your doorstep.
+                    From the useful Raspberri Pi to the powerful Xbox One X we have everything to suit your needs so feel free to browse our
+                    site at your leisure.
                 </p>
             </div>
             <div class="mainText">
                 <h1>Getting Started</h1>
-                <p>Our goal is to supply you with the latest and greatest electronics, from
-                    consoles to circuitry, we have you covered.
+                <p>To get strated with browsing this website simply use the navigation bar at the top of the page, if you would
+                    like to view our range of products click on "XML Page" or if you would like to place an order click on
+                    "Order Form". Bear in mind you will need to get the name of the product you want before ordering (Copy & Paste).
                 </p>
             </div>
         </div>
