--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,9 @@
         <div class="header">
             <h1>Home</h1>
         </div>
-        <img class="homeBg" src="img/homeBg.png"/>
+        <div class="slideShow">
+            <img class="homeBg" src="img/homeBg.png"/>
+        </div>
         <div class="mainTextContainer">
             <div class="mainText">
                 <h1>Welcome</h1>
