--- a/Report.html
+++ b/Report.html
@@ -50,7 +50,7 @@
                 of Renee Garett, Jason Chiu, Ly Zhang and Sean D. Young, PhD (2017) “The seven website design elements 
                 most often discussed in relation to user engagement in the reviewed studies were navigation (62.86%), 
                 graphical representation (60%), organization (42.86%), content utility (37.14%), purpose (31.43%), 
-                simplicity (31.43%), and readability (31.43%)” (Section 4). It is very important that the navigation 
+                simplicity (31.43%), and readability (31.43%)” (Section 4). It is critical that the navigation 
                 bar is well designed, engaging and accessible, because it is arguably the most important aspect of the 
                 website and in many cases the first place the user looks upon first viewing the site. Therefor I moved the 
                 logo from the header to the navigation bar and changed the layout of the bar so that the logo was on the 
