--- a/Order.html
+++ b/Order.html
@@ -68,6 +68,7 @@
                     <div class="submitcontainer">
                         <button type="submit" class="submitBtn" id="last" onclick="checkAcc()">Place Order</button>
                     </div>
+                <!--I have used inline js for validation messages on my forms because it is more efficient than creating an individual function for the validation of each input tag or even iterating through the tags to find the correct one-->
                 </form>
             </div>
         </div>
