--- a/Products.html
+++ b/Products.html
@@ -22,7 +22,7 @@
     <div class="content" id="productList">
 
     </div>
-    <script src="google/wgxpath.install.js"></script>
+    <script src="google/wgxpath.install.js"></script> <!--Link to a copy of googles public xpath library (Which I have used to increase the compatibility with IE in relation to my parsing script as it was already compatible with all other browsers)-->
     <script src="js/rffunctions.js"></script>
     <script src="js/rfparser.js"></script>
 </body>
