--- a/Slideshow.html
+++ b/Slideshow.html
@@ -1,5 +1,5 @@
 <head>
-    <title>East Midlands Electronics Home</title>
+    <title>East Midlands Electronics Slideshow</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
 </head>
