--- a/Slideshow.html
+++ b/Slideshow.html
@@ -91,7 +91,7 @@
                         Our soldering irons are all from quality brands.
                     </p>
                 </div>
-                <div class="buyBtn">
+                <div class="buyBtn" onclick="window.location.href = 'Products.html'">
                     Buy It Now
                 </div>
             </div>
